k8s/istio/03-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: dev-zero-trust-mtls
  namespace: dev
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: orders-service-metrics-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: orders-service
  mtls:
    mode: STRICT
  portLevelMtls:
    8003:
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: products-service-metrics-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: products-service
  mtls:
    mode: STRICT
  portLevelMtls:
    8004:
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: inventory-service-metrics-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: inventory-service
  mtls:
    mode: STRICT
  portLevelMtls:
    8001:
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: cosmo-router-metrics-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: cosmo-router
  mtls:
    mode: STRICT
  portLevelMtls:
    9090:
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: notification-service-metrics-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: notification-service
  mtls:
    mode: STRICT
  portLevelMtls:
    8002:
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: demand-forecast-service-metrics-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: demand-forecast-service
  mtls:
    mode: STRICT
  portLevelMtls:
    8005:
      mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: prometheus-telemetry-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: prometheus
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: grafana-telemetry-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: grafana
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: tempo-telemetry-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: tempo
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: loki-telemetry-mtls
  namespace: dev
spec:
  selector:
    matchLabels:
      app: loki
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: keycloak-telemetry-mtls
  namespace: auth
spec:
  selector:
    matchLabels:
      app: keycloak
  mtls:
    mode: PERMISSIVE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: data-zero-trust-mtls
  namespace: data
spec:
  mtls:
    mode: PERMISSIVE
