k8s/istio/canary-deployment-products-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service-v2
  namespace: staging
  labels:
    app: products-service
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-service
      version: v2
  template:
    metadata:
      labels:
        app: products-service
        version: v2
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8004"
        prometheus.io/path: "/actuator/products/prometheus"
    spec:
      containers:
        - name: products-service
          image: georgegxx/products-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 2000m
              memory: 768Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8004
            initialDelaySeconds: 20
            periodSeconds: 15
