k8s/istio/04-kiali.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali
spec:
  type: NodePort
  ports:
    - name: http-kiali
      port: 20001
      targetPort: 20001
      nodePort: 32001
    - name: http-metrics
      port: 9090
      targetPort: 9090
  selector:
    app: kiali
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app: kiali
    app.kubernetes.io/name: kiali
    app.kubernetes.io/instance: kiali
    app.kubernetes.io/version: "v2.31.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiali
  template:
    metadata:
      labels:
        app: kiali
        app.kubernetes.io/name: kiali
        app.kubernetes.io/instance: kiali
        app.kubernetes.io/version: "v2.31.0"
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: kiali
      containers:
        - name: kiali
          image: quay.io/kiali/kiali:v2.31.0
          imagePullPolicy: IfNotPresent
          command:
            - "/opt/kiali/kiali"
          args:
            - "-config"
            - "/kiali-configuration/config.yaml"
          ports:
            - name: api-port
              containerPort: 20001
            - name: http-metrics
              containerPort: 9090
          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "600m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /kiali/healthz
              port: 20001
            initialDelaySeconds: 5
            periodSeconds: 3
            timeoutSeconds: 3
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /kiali/healthz
              port: 20001
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 10
          volumeMounts:
            - name: kiali-configuration
              mountPath: "/kiali-configuration"
            - name: kiali-secret
              mountPath: "/kiali-secret"
      volumes:
        - name: kiali-configuration
          configMap:
            name: kiali
        - name: kiali-secret
          secret:
            secretName: kiali
            optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: istio-system
spec:
  type: ExternalName
  externalName: kube-prometheus-kube-prome-prometheus.observability.svc.cluster.local
  ports:
    - name: http-prom
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: tempo
  namespace: istio-system
spec:
  type: ExternalName
  externalName: tempo.observability.svc.cluster.local
  ports:
    - name: http-ui
      port: 3200
      targetPort: 3200
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: istio-system
spec:
  type: ExternalName
  externalName: kube-prometheus-grafana.observability.svc.cluster.local
  ports:
    - name: http-grafana
      port: 80
      targetPort: 80
