k8s/istio/02-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservices-gateway
  namespace: staging
spec:
  selector:
    istio: ingressgateway # Uses Istio default Ingress Gateway proxy
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-edge-routes
  namespace: staging
spec:
  hosts:
    - "*"
  gateways:
    - microservices-gateway
  http:
    # 1. API & Backend requests -> Routed to Spring Cloud API Gateway
    - match:
        - uri:
            prefix: /api/
        - uri:
            prefix: /v3/api-docs
        - uri:
            prefix: /swagger-ui
        - uri:
            exact: /swagger-ui.html
      route:
        - destination:
            host: api-gateway.staging.svc.cluster.local
            port:
              number: 8080

    # 2. Keycloak Auth requests -> Routed to Keycloak
    - match:
        - uri:
            prefix: /realms/
        - uri:
            prefix: /resources/
        - uri:
            prefix: /admin/
        - uri:
            prefix: /js/
      route:
        - destination:
            host: keycloak.staging.svc.cluster.local
            port:
              number: 8181

    # 3. Default / Root -> Routed to Angular 21 SPA Storefront
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend.staging.svc.cluster.local
            port:
              number: 80
