k8s/istio/destination-rules-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: products-service-dr
  namespace: dev
spec:
  host: products-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: orders-service-dr
  namespace: dev
spec:
  host: orders-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: inventory-service-dr
  namespace: dev
spec:
  host: inventory-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-service-dr
  namespace: dev
spec:
  host: notification-service
  subsets:
    - name: v1
      labels:
        version: v1
